# locker-tracker

./: CMakeLists.txt  assets.cpp  assets.hpp  colorText.cpp  colorText.hpp  handlers.cpp  main  main.cpp  run.bat  run.js  students.json  utilityFunctions.cpp  utilityFunctions.hpp
